--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <h2>Authors</h2>
 <p>      Alex</p>
 <h2>Contact</h2>
-<p> (wsc2.padma@gmail.com)<br/>      </p>
+<p> (wsc2.padma@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
@@ -72,7 +73,10 @@
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/blrbug/Tester">blrbug/Tester</a>
     </div>
-
+<?php 
+  echo "<a href=page.php>Ссылка на страницу PHP</a><br />"; 
+ 
+?>
   </div>
 
   
